# schnorr-musig

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
musig/: Cargo.toml  README.md
musig/src/: aggregated_pubkey.rs  encoder.rs  errors.rs  hash.rs  hasher.rs  jubjub.rs  lib.rs  musig.rs  musig_error.rs  musig_hasher.rs  musig_verifier.rs  signer.rs  tests.rs  util.rs  verifier.rs
musig/tests/: musig_tests.rs
musig_wasm/: Cargo.toml  README.md
musig_wasm/src/: builder.rs  lib.rs  musig_wasm.rs  signature_aggregator.rs  signature_verifier.rs  utils.rs  wasm_formats.rs
musig_wasm/tests/: musig_wasm_tests.rs
musig_wasm/www/: README.md  index.js  package-lock.json  package.json
wasm/: .gitignore  Cargo.toml  build.sh  package.json  web-wasm.js
wasm/example/: .gitignore  package.json
wasm/example/test/: example.test.ts
wasm/src/: aggregated_pubkey.rs  decoder.rs  lib.rs  signer.rs  tests.rs  utils.rs  verifier.rs
wasm/typescript-example/: .gitignore  package.json  tsconfig.json
wasm/typescript-example/test/: example.test.ts
wasm/typescript-musig/: .gitignore  package.json  tsconfig.json
wasm/typescript-musig/src/: signer.ts
wasm/typescript-musig/test/: example.test.ts
