[package]
name = "musig"
version = "0.1.0"
authors = ["Oleksandr Deundiak <deundiak@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="check-franklin-circuit-transpile"}
bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman", branch = "plonk_release" }
sha2 = "0.8.0"

[dev-dependencies]
rand = "0.4.0"
hex = "0.4.0"