[package]
name = "musig"
version = "0.1.0"
authors = ["Oleksandr Deundiak <deundiak@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman", branch = "plonk_release" }
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="constant_time"}
sha2 = "0.8.0"
rand = "0.4.0"
thiserror = "^1.0"
blake2 = "0.9.0"

[dev-dependencies]
hex = "0.4.0"